--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+app:
+  JwtSecret: castsecretjwt
+  JwtExpirationInMs: 7200000
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
@@ -9,4 +12,4 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
