--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
 	}
 	testImplementation 'io.projectreactor:reactor-test'
 	testCompile("org.springframework.boot:spring-boot-starter-test")
-	testCompile("org.springframework.boot:spring-boot-starter-security:2.2.2.RELEASE")
 	testCompile group: 'junit', name: 'junit', version: '4.12'
+	compile 'org.springframework.boot:spring-boot-starter-security:2.2.2.RELEASE'
 	compile "io.jsonwebtoken:jjwt:0.9.0"
 }
 
