--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
 	id 'org.springframework.boot' version '2.2.2.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
+	id 'maven'
 }
+
+apply plugin: 'maven'
 
 group = 'br.com.cast'
 version = '0.0.1-SNAPSHOT'
@@ -32,6 +35,8 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+
+	compile 'commons-lang:commons-lang:2.3'
 }
 
 test {
